# simkit

./: .gitattributes  .gitignore  DECISIONS.md  HANDOFF.md  OVERNIGHT_CHARTER.md  OVERNIGHT_REPORT.md  PHASE_PLAN.md  PROJECT_STATE.md  README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.lock.txt  requirements.txt
config/: README.md  pvt_union.example.json  pvt_union_example.union.json  pvtproject.example.json  pvtproject.example.yaml  review_example.review.json  rise_time_threshold.template.json  voltage_outs.siggroup.json  voltage_outs_rise.measure.json
docs/: corner_manager_plan.md  corner_manager_user_story.md  dispatch_mandates.md  phase2_pvt_union_spec.md  phase3a_orchestrator_spec.md  phase3b_measure_template_spec.md  phase4_gui_spec.md  phase5_dogfood_checklist.md  phase5_dogfood_results.md  phase5_session_handoff.md  phase5_stage1_spec.md  phase5_stage2_spec.md  phase5_stage3_spec.md  phase5_stage4_spec.md  phase5_stage5_spec.md  phase5_stage6_spec.md  phase5_unify_handoff.md  rf_designer_review_scenarios.md  schema.md  session_bootstrap.md  simkit_gap_matrix.md  simkit_new_user_friction.md
examples/: README.md  beacon_pvt.cornermodel.json
python/: README.md
scripts/: PHASE4_DEPS_HANDOFF.md  README.md  cleanup_deploys.sh  deploy_venv.sh  download_wheels.py  make_payload.py  unpack_payload.sh
skill/: README.md  S3_DESIGN.md  S3_PROBE_RESULTS.md  pvtCollect.il  pvtCorners.il  pvtError.il  pvtJson.il  pvtMeasure.il  pvtProject.il  pvtProjectDialog.il  pvtRunner.il
tests/: README.md  test_acceptance.py  test_acceptance_phase2.py  (+60 more)
(+204 files in other folders)
